--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,3 +25,11 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Service\Mercure\MercureCookieGenerator:
+        arguments:
+            $secretKey: '%env(MERCURE_JWT_KEY)%'
+
+    App\Mercure\JwtProvider:
+        arguments:
+            $secretKey: '%env(MERCURE_JWT_KEY)%'
